k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aix-web
  namespace: aix
  labels:
    app: aix-web
spec:
  type: ClusterIP
  selector:
    app: aix-web
  ports:
    - port: 80
      targetPort: 3000
      name: http
