k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aix-web
  namespace: aix
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [aix.trevormil.com]
      secretName: aix-trevormil-tls
  rules:
    - host: aix.trevormil.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aix-web
                port:
                  number: 80
